# crewai-gmail-cleaner

./: .gitignore  README.md  agents.py  crew.py  gmail_tools.py  main.py  pyproject.toml  requirements.txt  tasks.py
src/crewai_gmail_cleaner/: __init__.py  agents.py  crew.py  main.py  tasks.py
src/crewai_gmail_cleaner/config/: agents.yaml  tasks.yaml
src/crewai_gmail_cleaner/tools/: __init__.py  gmail_tool.py  gmail_tools.py
