[project]
name = "crewai-gmail-cleaner"
version = "1.10.1"
description = "CrewAI crew to clean Gmail (Plain/Linear notifications)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai==0.51.0",
    "google-api-python-client==2.118.0",
    "google-auth==2.28.1",
    "google-auth-oauthlib==1.2.0",
    "requests==2.31.0",
]

[tool.crewai]
type = "crew"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crewai_gmail_cleaner"]
